--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -35,25 +35,14 @@
                     <!-- search popup -->
                     <div id="search" class="pop-overlay">
                         <div class="popup">
-                            <form action="#" method="post" class="search-box">
-                                <input type="search" placeholder="Search your Keyword" name="search" required="required"
-                                    autofocus="">
+                            <form class="search-box" id="search-box">
+                                <input type="search" placeholder="Search your Keyword" name="searchQuery" id="searchQuery"
+                                    onkeyup="searchProducts(event,this.value);" required="required" autofocus=""
+                                    autocomplete="false">
                                 <button type="submit" class="btn"><span class="fa fa-search"
                                         aria-hidden="true"></span></button>
+                                <div class="bg-white rounded mt-2 py-2" id="results-container" hidden style="height: 50vh; overflow-y: auto;"></div>
                             </form>
-                            <div class="browse-items">
-                                <h3 class="hny-title two mt-md-5 mt-4">Browse all:</h3>
-                                <ul class="search-items">
-                                    <li><a href="/">Action</a></li>
-                                    <li><a href="/">Drama</a></li>
-                                    <li><a href="/">Family</a></li>
-                                    <li><a href="/">Thriller</a></li>
-                                    <li><a href="/">Commedy</a></li>
-                                    <li><a href="/">Romantic</a></li>
-                                    <li><a href="/">Tv-Series</a></li>
-                                    <li><a href="/">Horror</a></li>
-                                </ul>
-                            </div>
                         </div>
                         <a class="close" href="#close">×</a>
                     </div>
@@ -73,7 +62,8 @@
                                     aria-haspopup="true" aria-expanded="false">
                                     <div class="profile_img">
                                         {{#if user.profilePic}}
-                                        <img src="{{user.profilePic}}" alt="" class="rounded-circle" width="1.2em" height="1.2em">
+                                        <img src="{{user.profilePic}}" alt="" class="rounded-circle" width="1.2em"
+                                            height="1.2em">
                                         {{else}}
                                         <svg width="1.2em" height="1.2em" viewBox="0 0 16 16"
                                             class="bi bi-person-circle" fill="currentColor"
@@ -96,7 +86,8 @@
                                         {{/if}}
                                     </li>
                                     {{#if user}}
-                                    <li class="logout"> <a type="button" onclick="logout(event, '/logout')" ><i class="fa fa-power-off"></i> Logout</a> </li>
+                                    <li class="logout"> <a type="button" onclick="logout(event, '/logout')"><i
+                                                class="fa fa-power-off"></i> Logout</a> </li>
                                     {{else}}
                                     <li class="login"> <a href="/login"><i class="fa fa-sign-in"></i> Login</a> </li>
                                     {{/if}}
