Added layout for view upcoming movies page

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -41,7 +41,7 @@
                                     autocomplete="false">
                                 <button type="submit" class="btn"><span class="fa fa-search"
                                         aria-hidden="true"></span></button>
-                                <div class="bg-white rounded mt-2 py-2" id="results-container" hidden style="height: 50vh; overflow-y: auto;"></div>
+                                <div class="bg-white rounded mt-2 py-2" id="results-container" hidden style="max-height: 50vh; overflow-y: auto;"></div>
                             </form>
                         </div>
                         <a class="close" href="#close">×</a>
