--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -104,13 +104,13 @@
                         <h6 class="text-center mb-5">Payment Options</h6>
                         <div class="row">
                             <div class="col-md-6">
-                                <a href="" class="btn btn-warning btn-paypal rounded px-5 py-1">
-                                    <img src="/assets/images/Paypal.png" style="width: 100%;" alt="">
+                                <a href="" class="btn btn-warning btn-paypal rounded py-1">
+                                    <img src="/assets/images/Paypal.png" style="width: 80%;" class="my-2" alt="">
                                 </a>
                             </div>
                             <div class="col-md-6">
-                                <a href="" class="btn btn-warning btn-razorpay rounded px-5 py-1">
-                                    <img src="/assets/images/Razorpay.png" style="width: 100%;" alt="">
+                                <a href="" class="btn btn-warning btn-razorpay rounded py-1">
+                                    <img src="/assets/images/Razorpay.png" style="width: 80%;" class="my-2" alt="">
                                 </a>
                             </div>
                         </div>
