--- a/views/user/homepage.hbs
+++ b/views/user/homepage.hbs
@@ -182,7 +182,7 @@
                             </span>{{this.releaseDate}}</p>
                     </div>
                     <div class="button-center text-center mt-4">
-                        <a href="" class="btn btn-outline-info btn-block text-uppercase">View</a>
+                        <a href="/view-upcoming-movie?movieId={{this._id}}" class="btn btn-outline-info btn-block text-uppercase">View</a>
                     </div>
                 </div>
                 {{/each}}
