--- a/views/user/upcoming-movies.hbs
+++ b/views/user/upcoming-movies.hbs
@@ -30,7 +30,7 @@
                             </h4>
                             <div class="row mt-5">
                                 <div class="col text-center">
-                                    <a href=""
+                                    <a href="/view-upcoming-movie?movieId={{this._id}}"
                                         class="btn btn-info text-uppercase font-weight-bold btn-sm rounded-pill px-5">View</a>
                                 </div>
                             </div>
