Added function to book tickets with razorpay payment
Added layout for view order page

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -88,6 +88,9 @@
   {{else}}
   {{>footer}}
   {{/if}}
+
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
   <script>
     // When the user scrolls down 20px from the top of the document, show the button
     window.onscroll = function () {
