--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -103,16 +103,18 @@
                     <div class="mt-5">
                         <h6 class="text-center mb-5">Payment Options</h6>
                         <div class="row">
+                            {{#with checkoutDetails}}
                             <div class="col-md-6">
                                 <a href="" class="btn btn-warning btn-paypal rounded py-1">
                                     <img src="/assets/images/Paypal.png" style="width: 80%;" class="my-2" alt="">
                                 </a>
                             </div>
                             <div class="col-md-6">
-                                <a href="" class="btn btn-warning btn-razorpay rounded py-1">
+                                <a type="button" onclick="checkoutRazorpay(event, '{{screenId}}', '{{showId}}', '{{numberOfSeats}}', '{{seats}}', '{{totalAmount}}' )" class="btn btn-warning btn-razorpay rounded py-1">
                                     <img src="/assets/images/Razorpay.png" style="width: 80%;" class="my-2" alt="">
                                 </a>
                             </div>
+                            {{/with}}
                         </div>
                     </div>
                 </div>
