Added layout for my-orders page and added function to get all orders to display in my-orders page
Modified alert style

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -33,6 +33,8 @@
 
   <link rel="stylesheet" href="/stylesheets/style.css">
 
+  <link rel="stylesheet" href="/assets/css/borderless.css">
+
   <script src="/assets/js/jquery-3.3.1.min.js"></script>
   <script src="/assets/js/jquery-1.10.2.min.js"></script>
 </head>
@@ -114,7 +116,7 @@
   <!-- /move top -->
 
   <!-- Sweet Alert -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="/assets/js/sweetalert2.min.js"></script>
   <!-- /Sweet Alert -->
 
   <script src="/assets/js/jquery.nicescroll.js"></script>
