--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -91,6 +91,10 @@
                                     {{else}}
                                     <li class="login"> <a href="/login"><i class="fa fa-sign-in"></i> Login</a> </li>
                                     {{/if}}
+                                    <li class="logout"> <a type="button" onclick="logout(event, '/logout')"><i
+                                                class="fa fa-user"></i> My Profile</a> </li>
+                                    <li class="logout"> <a type="button" href="/my-orders"><i
+                                                class="fa fa-ticket"></i> My Orders</a> </li>
                                 </ul>
                             </li>
                         </ul>
