--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,7 @@ select {
 }
 
 .card_shadow {
-  box-shadow: 5px 10px 18px #888888;
+  box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.2);
 }
 
 ::placeholder {
@@ -86,6 +86,12 @@ select {
 
 .btn-shadow:hover {
   box-shadow: 1px 1px 4px 2px #888888 !important;
+}
+
+.pill_enlarge:hover {
+  transition: 300ms;
+  transform: scale(1.02);
+  color: var(--primary) !important;
 }
 
 .pill_shadow:hover {
@@ -108,4 +114,72 @@ select {
 .reservedSeat::before{
   background-color: #ff0000 !important;
   cursor: not-allowed;
+}
+
+.overlap {
+  position: relative; bottom: 12vh;
+}
+
+.shadow-dark {
+  box-shadow: 5px 5px 10px #555555;
+}
+
+.shadow-white {
+  box-shadow: 5px 10px 18px #eeeeee;
+}
+
+.shadow-primary {
+  box-shadow: 5px 5px 10px var(--primary);
+}
+
+.shadow-secondary {
+  box-shadow: 5px 5px 10px var(--secondary);
+}
+
+.shadow-success {
+  box-shadow: 5px 5px 10px var(--success);
+}
+
+.shadow-warning {
+  box-shadow: 5px 5px 10px var(--warning);
+}
+
+.shadow-danger {
+  box-shadow: 5px 5px 10px var(--danger);
+}
+
+.shadow-info {
+  box-shadow: 5px 5px 10px var(--info);
+}
+
+
+.img-container {
+  position: relative;
+  width: 50%;
+}
+
+.overlay-img {
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.img-overlay {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 12.5vh;
+  left: 12.5vh;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.img-container:hover .overlay-img {
+  opacity: 0.5;
+}
+
+.img-container:hover .img-overlay {
+  opacity: 1;
 }
