--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -36,12 +36,13 @@
                     <div id="search" class="pop-overlay">
                         <div class="popup">
                             <form class="search-box" id="search-box">
-                                <input type="search" placeholder="Search your Keyword" name="searchQuery" id="searchQuery"
-                                    onkeyup="searchProducts(event,this.value);" required="required" autofocus=""
-                                    autocomplete="false">
+                                <input type="search" placeholder="Search your Keyword" name="searchQuery"
+                                    id="searchQuery" onkeyup="searchProducts(event,this.value);" required="required"
+                                    autofocus="" autocomplete="false">
                                 <button type="submit" class="btn"><span class="fa fa-search"
                                         aria-hidden="true"></span></button>
-                                <div class="bg-white rounded mt-2 py-2" id="results-container" hidden style="max-height: 50vh; overflow-y: auto;"></div>
+                                <div class="bg-white rounded mt-2 py-2" id="results-container" hidden
+                                    style="max-height: 50vh; overflow-y: auto;"></div>
                             </form>
                         </div>
                         <a class="close" href="#close">×</a>
@@ -81,13 +82,13 @@
                                     {{#if user}}
                                     <li class="logout"> <a type="button" onclick="logout(event, '/logout')"><i
                                                 class="fa fa-power-off"></i> Logout</a> </li>
+                                    <li class="logout"> <a href="/my-profile"><i class="fa fa-user"></i> My Profile</a>
+                                    </li>
+                                    <li class="logout"> <a href="/my-orders"><i class="fa fa-ticket"></i> My Orders</a>
+                                    </li>
                                     {{else}}
                                     <li class="login"> <a href="/login"><i class="fa fa-sign-in"></i> Login</a> </li>
                                     {{/if}}
-                                    <li class="logout"> <a href="/my-profile"><i
-                                                class="fa fa-user"></i> My Profile</a> </li>
-                                    <li class="logout"> <a href="/my-orders"><i
-                                                class="fa fa-ticket"></i> My Orders</a> </li>
                                 </ul>
                             </li>
                         </ul>
